<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Healthier LifeStyle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="register">New Users Register Here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Submit</string>
    <string name="forgot_username">Forgot Username</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_user_info_update">UserInfoUpdate</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="desired_body_image">Please select your desired body image.</string>
    <string name="current_body_image">Please select your current body image.</string>
    <string name="title_activity_user_status_screen">UserStatusScreen</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registration_button">Register Now</string>
    <string name="register_later">Register Later</string>

</resources>
