<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="center"
        android:measureWithLargestChild="false"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/text_field_border"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="text"
            android:padding="5dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/text_field_border"
            android:ems="10"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            android:padding="5dp" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:enabled="false"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgot_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_username"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/hyperlink"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/hyperlink"
        android:textSize="12sp" />

</LinearLayout>